Add SignIn with GitHub

--- a/.env
+++ b/.env
@@ -2,4 +2,10 @@ AUTH_SECRET=bac8982a1777a96f116b35ad5c7f44b1
 NEXT_PUBLIC_BASE_URL=http://localhost:8080
 
 # Temp
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="mongodb+srv://Arial:100802@nodejs.vnlvfuo.mongodb.net/idtek?retryWrites=true&w=majority"
+
+GITHUB_CLIENT_ID=Ov23lif176y0W5XKVkSt
+GITHUB_CLIENT_SECRET=64cb4f66eddb1f082eb9d428ba2dd6daf300ee13
+
+GOOGLE_CLIENT_ID=697942145603-7oovtrgss28n2giiv2ammac5p2dm18ac.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
