--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.377.0",
     "negotiator": "^0.6.3",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "next-auth": "^5.0.0-beta.17",
     "next-intl": "^3.12.2",
     "next-themes": "^0.3.0",
     "prisma": "^5.14.0",
     "radix-ui": "^1.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
@@ -53,7 +53,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
     "eslint": "^8",
