--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@reduxjs/toolkit": "^2.2.4",
+    "@tanstack/react-table": "^8.17.3",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
